major chid fix #deploy

--- a/frontend/src/App/MarketEventsPresenter/AllEventsTable.module.scss
+++ b/frontend/src/App/MarketEventsPresenter/AllEventsTable.module.scss
@@ -11,7 +11,7 @@
 table.main {
 
   tr {//#242424
-    background-color: rgba(52, 52, 52, 0.35);
+    //background-color: rgba(52, 52, 52, 0.35);
 
     &.spacer {
       background-color: unset !important;
