--- a/frontend/src/App/App/App.module.scss
+++ b/frontend/src/App/App/App.module.scss
@@ -22,7 +22,7 @@
 .background {
   width: 100%;
   height: 100%;
-  background: radial-gradient(
+  /*background: radial-gradient(
                   circle farthest-side at 0% 50%,
                   #282828 23.5%,
                   rgba(255, 170, 0, 0) 0
@@ -67,5 +67,5 @@
   0 0,
   linear-gradient(90deg, #2c3539 2%, #282828 0, #282828 98%, #2c3539 0%) 0 0
   #282828;
-  background-size: 40px 60px;
+  background-size: 40px 60px;*/
 }
